--- a/po/wesnoth-lib/gl.po
+++ b/po/wesnoth-lib/gl.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-11-01 17:16+0100\n"
+"PO-Revision-Date: 2011-11-09 21:35+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -23,6 +23,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -2028,8 +2029,6 @@ msgstr "Bando"
 
 #. [label]: id=nick_title
 #: data/gui/default/window/mp_change_control.cfg:73
-#, fuzzy
-#| msgid "Nick"
 msgid "Nickname"
 msgstr "Alcume"
 
@@ -2953,8 +2952,6 @@ msgstr "Avanzada"
 
 # Non o vin no contexto.
 #: src/game_preferences_display.cpp:1292
-#, fuzzy
-#| msgid "Choose theme"
 msgid "Choose Theme"
 msgstr "Escoller"
 
@@ -3839,16 +3836,12 @@ msgid "This hotkey is already in use."
 msgstr "Este atallo xa se está a empregar."
 
 #: src/preferences_display.cpp:429
-#, fuzzy
-#| msgid ""
-#| "Screenshot hotkeys cannot be combined with the Control, Alt or Meta "
-#| "modifiers."
 msgid ""
 "Screenshot hotkeys should be combined with the Control, Alt or Meta "
 "modifiers to avoid problems."
 msgstr ""
-"Os atallos de capturas non se poden combinar cos modificadores «Ctrl», «Alt» "
-"e «Meta»."
+"Os atallos de capturas non se deberían combinar cos modificadores «Ctrl», "
+"«Alt» e «Meta»."
 
 #: src/preferences_display.cpp:429
 msgid "Warning"
