--- a/po/wesnoth-multiplayer/gl.po
+++ b/po/wesnoth-multiplayer/gl.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-10-23 14:31+0200\n"
+"PO-Revision-Date: 2011-11-09 21:59+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -23,6 +23,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -94,10 +95,8 @@ msgstr "Non mortos"
 
 #. [multiplayer]: id=multiplayer_Aethermaw
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:4
-#, fuzzy
-#| msgid "2p — The Freelands"
 msgid "2p — Aethermaw"
-msgstr "2 xog. — As terras libres"
+msgstr "2 xog. — Édermo"
 
 #. [multiplayer]: id=multiplayer_Aethermaw
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:5
@@ -115,6 +114,18 @@ msgid ""
 "herself by arranging battles between the mortal beings unlucky enough to be "
 "drawn into its depths. Designed by Doc Paterson."
 msgstr ""
+"Hai moito tempo, a gran maga Sula foi encerrada no Édermo, un punto de "
+"encontro de enerxía mística dunha natureza caótica capaz de impedirlle "
+"escapar. Pero co pasar dos séculos, Sula foi pouco a pouco adaptando os seus "
+"poderes ao turbulento desorde que é o Édermo, e agora comeza a proxectar a "
+"súa influencia sobre o plano material, alimentándose de rexións enteiras e "
+"centenares de mundos distintos, en diferentes espazos tanto físicos como "
+"temporais. Experimenta con esas disparatadas pezas do cosmos, manipúlaas, "
+"mestúraas e as traslada ao Édermo e de volta. Se o seu dominio do Édermo "
+"segue a medrar, pode que un día Sula chegue a se liberar dos seus barrotes. "
+"Pero ata entón, non ten moito máis que facer que entreterse organizando "
+"batallas entre mortais coa mala sorte de ser arrastrados ata as súas "
+"profundidades."
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:21
@@ -178,10 +189,8 @@ msgstr "Sur"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:276
-#, fuzzy
-#| msgid "A strange place. Designed by Doc Paterson"
 msgid "Aethermaw — Created by Doc Paterson"
-msgstr "Un lugar estraño."
+msgstr "Édermo"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:291
@@ -201,12 +210,26 @@ msgid ""
 "unite the two halves of the battlefield. The process will be complete by the "
 "end of turn 6.</span>\n"
 msgstr ""
+"A gran maga Sula trouxo aos vosos exércitos a este punto do cosmos, e esixe "
+"que a entreteñades loitando.\n"
+"\n"
+"\n"
+"\n"
+"\n"
+"<span color='red'>Nota:</span>\n"
+"\n"
+"<span color='green'>As unidades non poden situarse nos hexágonos cunha morea "
+"de rochas, mais poden recrutarse neles.</span>\n"
+"\n"
+"<span color='green'>A partir da cuarta rolda, a gran maga Sula comezará a "
+"unir as dúas metades do campo de batalla, e rematará de xuntalas na sexta "
+"rolda.</span>\n"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:304
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:321
 msgid "The Aethermaw growls."
-msgstr ""
+msgstr "En todo o Édermo escóitase un ruxido."
 
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:6
