--- a/po/wesnoth-lib/ko.po
+++ b/po/wesnoth-lib/ko.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1.1+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-10-01 23:27+0900\n"
+"PO-Revision-Date: 2011-11-10 19:55+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -27,17 +27,17 @@ msgstr "깊은 물"
 #. [terrain_type]: id=deep_water_gray
 #: data/core/terrain.cfg:19
 msgid "Gray Deep Water"
-msgstr ""
+msgstr "깊은 회색 물"
 
 #. [terrain_type]: id=deep_water
 #: data/core/terrain.cfg:30
 msgid "Medium Deep Water"
-msgstr ""
+msgstr "일반 깊은 물"
 
 #. [terrain_type]: id=deep_water_tropical
 #: data/core/terrain.cfg:40
 msgid "Tropical Deep Water"
-msgstr ""
+msgstr "열대의 깊은 물"
 
 #. [terrain_type]: id=gray_tropical_water
 #. [terrain_type]: id=shallow_water
@@ -49,22 +49,22 @@ msgstr "얕은 물"
 #. [terrain_type]: id=gray_tropical_water
 #: data/core/terrain.cfg:51
 msgid "Gray Shallow Water"
-msgstr ""
+msgstr "얕은 회색 물"
 
 #. [terrain_type]: id=shallow_water
 #: data/core/terrain.cfg:62
 msgid "Medium Shallow Water"
-msgstr ""
+msgstr "일반 얕은 물"
 
 #. [terrain_type]: id=tropical_water
 #: data/core/terrain.cfg:72
 msgid "Tropical Shallow Water"
-msgstr ""
+msgstr "열대의 얕은 물"
 
 #. [terrain_type]: id=ford
 #: data/core/terrain.cfg:82
 msgid "Ford"
-msgstr ""
+msgstr "냇가"
 
 #. [terrain_type]: id=gray_reef
 #. [terrain_type]: id=reef
@@ -77,12 +77,12 @@ msgstr "산호초"
 #. [terrain_type]: id=gray_reef
 #: data/core/terrain.cfg:93
 msgid "Gray Coastal Reef"
-msgstr ""
+msgstr "회색 산호초"
 
 #. [terrain_type]: id=tropical_reef
 #: data/core/terrain.cfg:113
 msgid "Tropical Coastal Reef"
-msgstr ""
+msgstr "열대 산호초"
 
 #. [terrain_type]: id=swamp_water
 #. [terrain_type]: id=quagmire
@@ -93,7 +93,7 @@ msgstr "늪"
 #. [terrain_type]: id=quagmire
 #: data/core/terrain.cfg:135
 msgid "Muddy Quagmire"
-msgstr ""
+msgstr "진흙 수렁"
 
 #. [terrain_type]: id=grassland
 #. [terrain_type]: id=savanna
@@ -107,22 +107,22 @@ msgstr "초원"
 #. [terrain_type]: id=grassland
 #: data/core/terrain.cfg:153
 msgid "Green Grass"
-msgstr ""
+msgstr "초록 잔디"
 
 #. [terrain_type]: id=savanna
 #: data/core/terrain.cfg:164
 msgid "Semi-dry Grass"
-msgstr ""
+msgstr "반쯤 마른 잔디"
 
 #. [terrain_type]: id=grass_dry
 #: data/core/terrain.cfg:175
 msgid "Dry Grass"
-msgstr ""
+msgstr "마른 잔디"
 
 #. [terrain_type]: id=leaf_litter
 #: data/core/terrain.cfg:185
 msgid "Leaf Litter"
-msgstr ""
+msgstr "낙엽"
 
 #. [terrain_type]: id=dirt_dark
 #. [terrain_type]: id=dirt
@@ -140,7 +140,7 @@ msgstr "어두운 흙밭"
 #. [terrain_type]: id=dirt
 #: data/core/terrain.cfg:207
 msgid "Regular Dirt"
-msgstr ""
+msgstr "보통 진흙"
 
 #. [terrain_type]: id=road
 #: data/core/terrain.cfg:217
@@ -161,17 +161,17 @@ msgstr "길"
 #. [terrain_type]: id=road
 #: data/core/terrain.cfg:227
 msgid "Regular Cobbles"
-msgstr ""
+msgstr "보통 자갈"
 
 #. [terrain_type]: id=road_clean
 #: data/core/terrain.cfg:237
 msgid "Clean Gray Cobbles"
-msgstr ""
+msgstr "깨끗한 회색 자갈"
 
 #. [terrain_type]: id=stone_path
 #: data/core/terrain.cfg:247
 msgid "Overgrown Cobbles"
-msgstr ""
+msgstr "큼지막한 자갈"
 
 #. [terrain_type]: id=ice
 #: data/core/terrain.cfg:260
@@ -201,7 +201,7 @@ msgstr "모래"
 #. [terrain_type]: id=sand
 #: data/core/terrain.cfg:293
 msgid "Beach Sands"
-msgstr ""
+msgstr "바닷가 모래"
 
 #. [terrain_type]: id=oasis
 #: data/core/terrain.cfg:301
@@ -231,12 +231,12 @@ msgstr "논밭"
 #. [terrain_type]: id=stones_small
 #: data/core/terrain.cfg:355
 msgid "Stones"
-msgstr ""
+msgstr "돌"
 
 #. [terrain_type]: id=mushrooms_small
 #: data/core/terrain.cfg:364
 msgid "Small Mushrooms"
-msgstr ""
+msgstr "작은 버섯"
 
 #. [terrain_type]: id=mushrooms_farm
 #: data/core/terrain.cfg:373
@@ -246,18 +246,18 @@ msgstr "버섯 농장"
 #. [terrain_type]: id=desert_plants
 #: data/core/terrain.cfg:382
 msgid "Desert Plants"
-msgstr ""
+msgstr "사막 식물"
 
 #. [terrain_type]: id=desert_plants_sans_bones
 #: data/core/terrain.cfg:391
 msgid "Desert Plants without Bones"
-msgstr ""
+msgstr "뼈를 뺀 사막 식물"
 
 #. [terrain_type]: id=windmill
 #. [terrain_type]: id=windmill_village
 #: data/core/terrain.cfg:400 data/core/terrain.cfg:1279
 msgid "Windmill"
-msgstr ""
+msgstr "풍차"
 
 #. [terrain_type]: id=fence
 #: data/core/terrain.cfg:409
@@ -272,12 +272,12 @@ msgstr ""
 #. [terrain_type]: id=water-lilies
 #: data/core/terrain.cfg:427
 msgid "Water Lilies"
-msgstr ""
+msgstr "연꽃"
 
 #. [terrain_type]: id=water-lilies-flower
 #: data/core/terrain.cfg:437
 msgid "Flowering Water Lilies"
-msgstr ""
+msgstr "피어있는 연꽃"
 
 #. [terrain_type]: id=great_tree
 #. [terrain_type]: id=great_tree_dead
@@ -841,10 +841,8 @@ msgstr "늪지대 마을"
 
 #. [terrain_type]: id=mermen-village
 #: data/core/terrain.cfg:1492
-#, fuzzy
-#| msgid "Tropical Village"
 msgid "Merfolk Village"
-msgstr "열대 마을"
+msgstr "인어 마을"
 
 #. [terrain_type]: id=village_overlay
 #: data/core/terrain.cfg:1507
@@ -1081,10 +1079,8 @@ msgstr "나무 다리"
 #. [terrain_type]: id=rotbridgediag2
 #: data/core/terrain.cfg:1931 data/core/terrain.cfg:1943
 #: data/core/terrain.cfg:1955
-#, fuzzy
-#| msgid "Wooden Bridge"
 msgid "Rotting Bridge"
-msgstr "나무 다리"
+msgstr "썩은 다리"
 
 #. [terrain_type]: id=stone_bridge
 #: data/core/terrain.cfg:1969 data/core/terrain.cfg:1981
@@ -1251,10 +1247,8 @@ msgstr "없음"
 
 #. [label]
 #: data/gui/default/window/addon_uninstall_list.cfg:51
-#, fuzzy
-#| msgid "Update Add-ons"
 msgid "Uninstall Add-ons"
-msgstr "추가 기능 업데이트"
+msgstr "추가 기능 삭제"
 
 #. [scroll_label]
 #: data/gui/default/window/addon_uninstall_list.cfg:70
@@ -1467,8 +1461,10 @@ msgstr ""
 
 #. [label]: id=title
 #: data/gui/default/window/editor_set_starting_position.cfg:50
+#, fuzzy
+#| msgid "Choose theme"
 msgid "Choose Player"
-msgstr ""
+msgstr "테마 선택"
 
 #. [label]: id=message
 #: data/gui/default/window/editor_set_starting_position.cfg:70
@@ -1768,8 +1764,6 @@ msgstr "언어를 선택하세요:"
 #. [button]: id=ok
 #: data/gui/default/window/language_selection.cfg:128
 #: data/gui/default/window/language_selection.cfg:129 src/hotkeys.cpp:204
-#, fuzzy
-#| msgid "Change language"
 msgid "Change Language"
 msgstr "언어 변경"
 
@@ -1786,81 +1780,81 @@ msgstr ""
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:177
 msgid "Requires a password to join"
-msgstr ""
+msgstr "입장시 패스워드가 필요함"
 
 #. [toggle_button]: id=use_map_settings
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:178
 #: data/gui/default/window/mp_create_game.cfg:321
 msgid "Use map settings"
-msgstr ""
+msgstr "맵 설정 사용"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:179
 msgid "Reloaded game"
-msgstr ""
+msgstr "리로드 게임"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:180
 msgid "Unknown era"
-msgstr ""
+msgstr "알수없는 시대"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:182
 msgid "Gold per village"
-msgstr ""
+msgstr "마을당 금"
 
 #. [label]
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:184
 #: data/gui/default/window/mp_create_game.cfg:420
 msgid "Experience modifier"
-msgstr ""
+msgstr "경험치 수정"
 
 #. [row]
 #: data/gui/default/window/lobby_main.cfg:186
 msgid "Time limit"
-msgstr ""
+msgstr "시간 제한"
 
 #. [label]
 #: data/gui/default/window/lobby_main.cfg:305
 msgid "Sort players:"
-msgstr ""
+msgstr "유저 정렬:"
 
 #. [toggle_button]: id=player_list_sort_relation
 #: data/gui/default/window/lobby_main.cfg:313
 msgid "Friends first, ignored people last"
-msgstr ""
+msgstr "친구 우선, 무시자 최후"
 
 #. [toggle_button]: id=player_list_sort_name
 #: data/gui/default/window/lobby_main.cfg:321
 msgid "Alphabetically"
-msgstr ""
+msgstr "알파벳순"
 
 #. [definition]
 #: data/gui/default/window/lobby_main.cfg:337
 msgid "Selected game"
-msgstr ""
+msgstr "선택된 방"
 
 #. [definition]
 #: data/gui/default/window/lobby_main.cfg:338
 msgid "Current room"
-msgstr ""
+msgstr "현재 방"
 
 #. [definition]
 #: data/gui/default/window/lobby_main.cfg:339
 msgid "Lobby"
-msgstr ""
+msgstr "로비"
 
 #. [definition]
 #: data/gui/default/window/lobby_main.cfg:340
 msgid "Other games"
-msgstr ""
+msgstr "다른 방"
 
 #. [label]: id=room
 #: data/gui/default/window/lobby_main.cfg:479
 msgid "Rooms"
-msgstr ""
+msgstr "방"
 
 #. [image]: id=pending_messages
 #: data/gui/default/window/lobby_main.cfg:497
@@ -1870,22 +1864,22 @@ msgstr ""
 #. [label]
 #: data/gui/default/window/lobby_main.cfg:567
 msgid "Multiplayer Lobby"
-msgstr ""
+msgstr "멀티플레이 로비"
 
 #. [label]
 #: data/gui/default/window/lobby_main.cfg:575
 msgid "Filter:"
-msgstr ""
+msgstr "검색어:"
 
 #. [toggle_button]: id=filter_with_friends
 #: data/gui/default/window/lobby_main.cfg:586
 msgid "Friends"
-msgstr ""
+msgstr "친구 있는 방"
 
 #. [toggle_button]: id=filter_without_ignored
 #: data/gui/default/window/lobby_main.cfg:592
 msgid "No ignored"
-msgstr ""
+msgstr "무시자 없는 방"
 
 #. [toggle_button]: id=filter_vacant_slots
 #: data/gui/default/window/lobby_main.cfg:598
@@ -1895,14 +1889,14 @@ msgstr "빈 자리 있는 방"
 #. [toggle_button]: id=filter_invert
 #: data/gui/default/window/lobby_main.cfg:604
 msgid "Invert filter"
-msgstr ""
+msgstr "필터 역적용"
 
 #. [button]: id=ok
 #. [button]: id=send_message
 #: data/gui/default/window/lobby_main.cfg:648
 #: data/gui/default/window/mp_cmd_wrapper.cfg:101
 msgid "Send"
-msgstr ""
+msgstr "입력"
 
 #. #-#-#-#-#  wesnoth-lib.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [button]: id=show_preferences
@@ -1916,39 +1910,39 @@ msgstr "게임 옵션"
 #. [button]: id=refresh
 #: data/gui/default/window/lobby_main.cfg:672
 msgid "Refresh"
-msgstr ""
+msgstr "새로고침"
 
 #. [label]
 #. [button]: id=create
 #: data/gui/default/window/lobby_main.cfg:686
 #: data/gui/default/window/mp_create_game.cfg:41
 msgid "Create Game"
-msgstr ""
+msgstr "방 만들기"
 
 #. [button]: id=join_global
 #: data/gui/default/window/lobby_main.cfg:692
 msgid "Join"
-msgstr ""
+msgstr "참가"
 
 #. [button]: id=observe_global
 #: data/gui/default/window/lobby_main.cfg:698
 msgid "Observe"
-msgstr ""
+msgstr "관전"
 
 #. [toggle_button]: id=skip_replay
 #: data/gui/default/window/lobby_main.cfg:704
 msgid "Quick replay"
-msgstr ""
+msgstr "빠른 리플레이"
 
 #. [label]
 #: data/gui/default/window/lobby_player_info.cfg:38
 msgid "Player Info — "
-msgstr ""
+msgstr "유저 정보 — "
 
 #. [button]: id=start_whisper
 #: data/gui/default/window/lobby_player_info.cfg:70
 msgid "Send Private Message"
-msgstr ""
+msgstr "귓속말 보내기"
 
 #. [button]: id=add_to_friends
 #: data/gui/default/window/lobby_player_info.cfg:99
@@ -2452,8 +2446,6 @@ msgid "Skip AI moves"
 msgstr "AI 움직임 생략"
 
 #: src/game_preferences_display.cpp:176
-#, fuzzy
-#| msgid "Interrupt move when an ally is sighted"
 msgid "Interrupt move when an ally is sighted"
 msgstr "동맹군이 보일 때 이동 정지"
 
@@ -2491,15 +2483,13 @@ msgstr "로비 목록 정렬"
 
 #: src/game_preferences_display.cpp:185
 msgid "Iconize lobby list"
-msgstr ""
+msgstr "로비 목록에 아이콘 쓰기"
 
 #: src/game_preferences_display.cpp:186
 msgid "Save password to preferences (plain text)"
 msgstr ""
 
 #: src/game_preferences_display.cpp:187
-#, fuzzy
-#| msgid "Set path to wesnothd"
 msgid "Set Path to wesnothd"
 msgstr "wesnothd가 있는 위치 설정"
 
@@ -2592,8 +2582,6 @@ msgid "Custom"
 msgstr "임의 설정"
 
 #: src/game_preferences_display.cpp:215
-#, fuzzy
-#| msgid "Show Unit Idle Animations"
 msgid "Show unit idle animations"
 msgstr "유닛의 빈둥대기 애니메이션 보이기"
 
@@ -2668,7 +2656,7 @@ msgstr "버퍼 크기: "
 
 #: src/game_preferences_display.cpp:304
 msgid "Change the speed of scrolling around the map"
-msgstr ""
+msgstr "맵 스크롤 속도를 조정합니다"
 
 #: src/game_preferences_display.cpp:309 src/game_preferences_display.cpp:311
 msgid "Set the amount of chat lines shown"
@@ -2680,53 +2668,49 @@ msgstr ""
 
 #: src/game_preferences_display.cpp:317
 msgid "Choose whether the game should run full screen or in a window"
-msgstr ""
+msgstr "게임을 전체화면으로 할지 윈도우 모드로 할지 선택합니다"
 
 #: src/game_preferences_display.cpp:320
 msgid "Make units move and fight faster"
-msgstr ""
+msgstr "유닛의 이동과 전투 속도를 가속합니다"
 
 #: src/game_preferences_display.cpp:339
 msgid "Units move and fight speed"
-msgstr ""
+msgstr "유닛의 이동과 전투 속도"
 
 #: src/game_preferences_display.cpp:342
 msgid "Play short random animations for idle units"
-msgstr ""
+msgstr "움직이지 않는 유닛의 짧은 무작위 애니메이션을 실행합니다"
 
 #: src/game_preferences_display.cpp:345
 msgid "Continuously animate standing units in the battlefield"
-msgstr ""
+msgstr "전장에서 서 있는 유닛의 정지 애니메이션을 계속 보여줍니다"
 
 #: src/game_preferences_display.cpp:348
 msgid "Display animated terrain graphics"
-msgstr ""
+msgstr "동화처리된 지형 그래픽을 보여줍니다"
 
 #: src/game_preferences_display.cpp:354
 msgid "Set the frequency of unit idle animations"
-msgstr ""
+msgstr "유닛의 빈둥대기 애니메이션의 빈도를 설정합니다"
 
 #: src/game_preferences_display.cpp:359
 msgid "Set maximum number of automatic saves to be retained"
-msgstr ""
+msgstr "자동 저장 파일의 최대 보존 갯수를 설정합니다"
 
 #: src/game_preferences_display.cpp:363
 msgid "Do not animate AI units moving"
-msgstr ""
+msgstr "인공지능 유닛의 움직임을 보여주지 않습니다"
 
 #: src/game_preferences_display.cpp:366
 msgid "Sighting an allied unit interrupts your unit’s movement"
 msgstr ""
 
 #: src/game_preferences_display.cpp:369
-#, fuzzy
-#| msgid "Save replay on SP/MP victory or MP defeat"
 msgid "Save Replay on SP/MP Victory or MP Defeat"
 msgstr "싱글/멀티플레이 승리시나 멀티플레이 패배시 리플레이 저장"
 
 #: src/game_preferences_display.cpp:372
-#, fuzzy
-#| msgid "Delete auto-saves on SP/MP victory or MP defeat"
 msgid "Delete Auto-Saves on SP/MP Victory or MP Defeat"
 msgstr "싱글/멀티플레이 승리시나 멀티플레이 패배시 자동저장파일 삭제"
 
@@ -2759,10 +2743,8 @@ msgid "Show messages about all players joining the multiplayer lobby"
 msgstr ""
 
 #: src/game_preferences_display.cpp:394
-#, fuzzy
-#| msgid "Use new lobby interface"
 msgid "Use New Lobby Interface"
-msgstr "새 로비 인터페이스 쓰기"
+msgstr "새로운 로비 인터페이스 쓰기"
 
 #: src/game_preferences_display.cpp:396
 msgid "Find and set path to MP server to host LAN games."
@@ -2856,7 +2838,7 @@ msgstr "줄 수:"
 
 #: src/game_preferences_display.cpp:972 src/game_preferences_display.cpp:980
 msgid "Invalid username"
-msgstr ""
+msgstr "유효하지 않은 이름입니다"
 
 #: src/game_preferences_display.cpp:1083
 msgid "yes"
@@ -2868,15 +2850,15 @@ msgstr "아니오"
 
 #: src/game_preferences_display.cpp:1119
 msgid "friend"
-msgstr ""
+msgstr "친구"
 
 #: src/game_preferences_display.cpp:1125
 msgid "ignored"
-msgstr ""
+msgstr "무시자"
 
 #: src/game_preferences_display.cpp:1129
 msgid "(empty list)"
-msgstr ""
+msgstr "(목록이 비었음)"
 
 #: src/game_preferences_display.cpp:1254
 msgid "Prefs section^General"
@@ -2900,11 +2882,11 @@ msgstr "고급"
 
 #: src/game_preferences_display.cpp:1292
 msgid "Choose Theme"
-msgstr ""
+msgstr "테마 선택"
 
 #: src/game_preferences_display.cpp:1307
 msgid "New theme will take effect on next new or loaded game."
-msgstr ""
+msgstr "새 테마는 다음 새 게임 혹은 불러온 게임부터 적용됩니다."
 
 #: src/game_preferences_display.cpp:1311
 msgid "No known themes. Try changing from within an existing game."
@@ -3042,8 +3024,10 @@ msgid "Turn"
 msgstr ""
 
 #: src/gui/dialogs/game_load.cpp:317
+#, fuzzy
+#| msgid "Scenario Objectives"
 msgid "Scenario start"
-msgstr ""
+msgstr "시나리오 목표"
 
 #: src/gui/dialogs/game_load.cpp:320
 msgid "Difficulty: "
@@ -3163,8 +3147,6 @@ msgid "Right Mouse Click"
 msgstr "마우스 오른클릭"
 
 #: src/hotkeys.cpp:55
-#, fuzzy
-#| msgid "Animate map"
 msgid "Animate Map"
 msgstr "맵의 움직임 보기"
 
@@ -3209,8 +3191,6 @@ msgid "Default Zoom"
 msgstr "기본 화면"
 
 #: src/hotkeys.cpp:66
-#, fuzzy
-#| msgid "Toggle Full screen"
 msgid "Toggle Full Screen"
 msgstr "전체 화면 전환"
 
@@ -3267,8 +3247,6 @@ msgid "Toggle Grid"
 msgstr "격자 표시"
 
 #: src/hotkeys.cpp:82
-#, fuzzy
-#| msgid "Mouse scrolling"
 msgid "Mouse Scrolling"
 msgstr "마우스 화면이동"
 
@@ -3333,10 +3311,8 @@ msgid "Best Possible Enemy Moves"
 msgstr "최선의 적의 움직임"
 
 #: src/hotkeys.cpp:100
-#, fuzzy
-#| msgid "Save Replay"
 msgid "Play Replay"
-msgstr "리플레이 저장"
+msgstr "리플레이 재생"
 
 #: src/hotkeys.cpp:101
 #, fuzzy
@@ -3345,10 +3321,8 @@ msgid "Reset Replay"
 msgstr "리플레이 저장"
 
 #: src/hotkeys.cpp:102
-#, fuzzy
-#| msgid "Save Replay"
 msgid "Stop Replay"
-msgstr "리플레이 저장"
+msgstr "리플레이 중단"
 
 #: src/hotkeys.cpp:103
 msgid "Next Turn"
@@ -3375,8 +3349,10 @@ msgid "Skip Animation"
 msgstr "애니메이션 생략"
 
 #: src/hotkeys.cpp:113
+#, fuzzy
+#| msgid "Enable Planning Mode on Start"
 msgid "Toggle Planning Mode"
-msgstr ""
+msgstr "처음부터 계획 모드 활성화"
 
 #: src/hotkeys.cpp:114
 msgid "Execute Planned Action"
@@ -3577,11 +3553,11 @@ msgstr ""
 
 #: src/hotkeys.cpp:196
 msgid "Delay Shroud Updates"
-msgstr ""
+msgstr "안개/장막 상태 갱신을 미룬다"
 
 #: src/hotkeys.cpp:197
 msgid "Update Shroud Now"
-msgstr ""
+msgstr "지금 안개/장막 상태를 갱신한다"
 
 #: src/hotkeys.cpp:198
 msgid "Continue Move"
@@ -3608,16 +3584,20 @@ msgid "Enter User Command"
 msgstr ""
 
 #: src/hotkeys.cpp:207
+#, fuzzy
+#| msgid "Custom"
 msgid "Custom Command"
-msgstr ""
+msgstr "임의 설정"
 
 #: src/hotkeys.cpp:208
 msgid "Run Formula"
 msgstr ""
 
 #: src/hotkeys.cpp:209
+#, fuzzy
+#| msgid "Clear Labels"
 msgid "Clear Messages"
-msgstr ""
+msgstr "딱지 삭제"
 
 #: src/hotkeys.cpp:213
 msgid "Refresh WML"
@@ -3636,14 +3616,10 @@ msgid "Start Tutorial"
 msgstr "연습 게임 시작하기"
 
 #: src/hotkeys.cpp:241
-#, fuzzy
-#| msgid "Start a campaign"
 msgid "Start Campaign"
 msgstr "캠페인 시작하기"
 
 #: src/hotkeys.cpp:248
-#, fuzzy
-#| msgid "Start a multiplayer game"
 msgid "Start Multiplayer Game"
 msgstr "멀티플레이 시작하기"
 
@@ -3724,8 +3700,6 @@ msgid "Landform:"
 msgstr "지형:"
 
 #: src/mapgen_dialog.cpp:249
-#, fuzzy
-#| msgid "Roads Between Castles"
 msgid "Roads between castles"
 msgstr "성 사이에 도로를 둔다"
 
@@ -3761,8 +3735,6 @@ msgid "Hotkey Settings"
 msgstr "단축키 설정"
 
 #: src/preferences_display.cpp:282 src/preferences_display.cpp:351
-#, fuzzy
-#| msgid "Press desired Hotkey (Esc cancels)"
 msgid "Press desired hotkey (Esc cancels)"
 msgstr "원하는 단축키를 누르세요 (Esc는 취소)"
 
@@ -3784,20 +3756,16 @@ msgstr "단축키 제거"
 
 #: src/preferences_display.cpp:394 src/preferences_display.cpp:402
 #: src/preferences_display.cpp:414
-#, fuzzy
-#| msgid "This Hotkey is already in use."
 msgid "This hotkey is already in use."
 msgstr "이 단축키는 이미 사용되고 있습니다."
 
 #: src/preferences_display.cpp:429
-#, fuzzy
-#| msgid ""
-#| "Warning: screenshot hotkeys not combined with Control, Alt or Meta keys."
 msgid ""
 "Screenshot hotkeys should be combined with the Control, Alt or Meta "
 "modifiers to avoid problems."
 msgstr ""
-"주의: 스크린샷 단축키가 컨트롤, 알트 및 메타 키와 이어져 있지 않습니다."
+"문제 발생 방지를 위해 스크린샷 단축키는 컨트롤, 알트 및 메타 키와 이어져 있어"
+"야 합니다."
 
 #: src/preferences_display.cpp:429
 msgid "Warning"
@@ -3809,7 +3777,7 @@ msgstr ""
 
 #: src/preferences_display.cpp:561
 msgid " (widescreen)"
-msgstr ""
+msgstr " (와이드스크린)"
 
 #: src/preferences_display.cpp:565
 msgid "Choose Resolution"
@@ -3857,6 +3825,12 @@ msgid ""
 "'$deprecated_key' will be removed in version $removal_version."
 msgstr ""
 
+#~ msgid "Saved preference:"
+#~ msgstr "설정된 테마:"
+
+#~ msgid "Add waypoint"
+#~ msgstr "중간 지점 추가"
+
 #~ msgid "Stop"
 #~ msgstr "정지"
 
@@ -3868,13 +3842,6 @@ msgstr ""
 
 #~ msgid "Close Window"
 #~ msgstr "창 닫기"
-
-#, fuzzy
-#~ msgid "Saved preference:"
-#~ msgstr "저장 된 테마:"
-
-#~ msgid "Add waypoint"
-#~ msgstr "중간 지점 추가"
 
 #, fuzzy
 #~ msgid "Aquatic Village"
