--- a/po/wesnoth-low/ko.po
+++ b/po/wesnoth-low/ko.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-10-24 19:14+0900\n"
+"POT-Creation-Date: 2011-11-07 17:23+0100\n"
+"PO-Revision-Date: 2011-11-10 19:43+0900\n"
 "Last-Translator: mistzone <drier22@gmail.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -35,8 +35,8 @@ msgid ""
 "the recorded history of the Elves.\n"
 "\n"
 msgstr ""
-"대륙에서의 오크의 두번째 침략 이후 그의 민족을 재결집했고, 엘프의 기록 역사에"
-"서 가장 유명한 영웅이 된 대군주 Kalenz의 이야기.\n"
+"대륙에서 일어난 오크의 두번째 침공 이후 그의 민족을 재결집시키고, 엘프의 기"
+"록 역사에서 가장 유명한 영웅이 된 대군주 Kalenz의 이야기.\n"
 "\n"
 
 #. [campaign]: id=LOW
@@ -544,8 +544,8 @@ msgid ""
 "Hold, Kalenz. The Ka’lian council should discuss our response. Maybe we can "
 "reach an agreement with them!"
 msgstr ""
-"멈추게, Kalenz. Ka'lian 의회에서 우리의 대응에 대해 의논할걸세. 어쩌면 저들"
-"과 합의점을 찾아낼 수 있을지도 모르네!"
+"멈추게, Kalenz. Ka'lian 의회에서 우리가 취할 대응에 대해 의논할걸세. 어쩌면 "
+"저들과 합의점을 찾아낼 수 있을지도 모르네!"
 
 #. [message]: id=Qumseh
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:397
@@ -569,7 +569,7 @@ msgstr ""
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:413
 msgid "We will follow you, Kalenz — but where can we go?"
-msgstr ""
+msgstr "자네를 따르지, Kalenz — 하지만 어디로 가지?"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:417
@@ -577,13 +577,12 @@ msgid ""
 "We must reach the elvish council in Ka’lian and enlist their help to "
 "recapture our home."
 msgstr ""
+"우린 엘프 의회 Ka'lian으로 가서 우리 고향을 되찾는데 도움을 청해야 하네."
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:421
-#, fuzzy
-#| msgid "We surrender!"
 msgid "We are surrounded!"
-msgstr "항복하겠소!"
+msgstr "우린 포위되어 있지 않나!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:425
@@ -591,11 +590,12 @@ msgid ""
 "Then we must storm one of the orcs’ outposts to break the encirclement "
 "before more enemies arrive!"
 msgstr ""
+"그럼 적들이 더 오기 전에 오크의 기지 중 한곳을 쳐서 포위를 뚫으면 되네!"
 
 #. [message]: id=Anduilas
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:429
 msgid "Very well, Kalenz — lead us!"
-msgstr ""
+msgstr "좋네, Kalenz — 우릴 이끌어주게!"
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter1/01_The_Uprooting.cfg:443
